--- a/shop.html
+++ b/shop.html
@@ -14,18 +14,12 @@
     />
     <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/estils.css" rel="stylesheet" type="text/css" />
-    <!-- <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous"
-  /> -->
   </head>
   <body>
     <div class="page-container">
       <!-- Page content -->
       <header>
-        <h1>Tienda online</h1>
+        <h1 class="fw-bold">Tienda online</h1>
         <div class="cart-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -63,7 +57,9 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Carrito</h1>
+              <h1 class="modal-title fs-3 fw-bold" id="exampleModalLabel">
+                Carrito
+              </h1>
               <button
                 type="button"
                 class="btn-close"
@@ -72,16 +68,11 @@
               ></button>
             </div>
             <div class="modal-body">
-              <!-- <p>El carrito está vacío.</p> -->
-              <div class="modal-item">
-                <span class="modal-item-qtty">5</span>
-                <p class="modal-item-name">Name</p>
-                <span class="modal-item-price">$ 5,00</span>
-              </div>
+              <p>El carrito está vacío.</p>
             </div>
             <div class="modal-footer">
               <p>Total:</p>
-              <span class="valor-total">$0.00</span>
+              <span class="valor-total fw-bold">€0.00</span>
             </div>
           </div>
         </div>
@@ -108,7 +99,70 @@
     { img: "chipsahoy", price: 2.2, qtty: 0 },
   ];
 
-  function addItem(item) {}
+  let cartItems = [];
+  let valorTotal = document.querySelector(".valor-total");
+  let cartQtty = document.querySelector(".cart-container-btn-qtty");
+
+  RandomId = () => Math.floor(Math.random() * 1000).toString();
+
+  const showCart = () => {
+    const modalBody = document.querySelector(".modal-body");
+    modalBody.innerHTML = "";
+    let totalPrice = 0;
+    let totalQtty = 0;
+
+    cartItems.forEach((item) => {
+      const modalItem = document.createElement("div");
+      modalItem.classList.add("modal-item");
+      modalItem.innerHTML = `
+      <span class="modal-item-qtty">${item.qtty}</span>
+      <p class="modal-item-name">${item.name}</p>
+      <span class="modal-item-price">€${item.price.toFixed(2)}</span>
+      <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      class="modal-item-icon-close"
+      >
+      <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+      />
+      </svg>
+      `;
+
+      totalPrice = totalPrice + item.qtty * item.price;
+      totalQtty += item.qtty;
+
+      valorTotal.innerText = "€" + totalPrice.toFixed(2);
+      cartQtty.innerText = totalQtty;
+
+      modalBody.appendChild(modalItem);
+    });
+  };
+
+  function addItem(item) {
+    const existingItem = cartItems.find((e) => e.name === item.img);
+
+    if (existingItem) {
+      existingItem.qtty++;
+    } else {
+      itemData = {
+        id: item.img,
+        qtty: 1,
+        name: item.img,
+        price: item.price,
+      };
+      cartItems = [...cartItems, itemData];
+    }
+
+    console.log("cartItems [] ", cartItems);
+
+    showCart();
+  }
 
   function removeItem(item) {}
 
@@ -122,25 +176,32 @@
       itemList.classList.add("col");
       itemList.innerHTML = `
         <div class="card h-100">
-            <img src="./assets/img/${
-              item.img
-            }.jpg" class="card-img-top" alt="Image">
-            <div class="card-body">
-                <h5 class="card-title">${item.img}</h5>
-                <p class="card-price">€${item.price.toFixed(2)}</p>
-                <a href="#" class="btn btn-primary add-to-cart-btn">Add to cart</a>
-                </div>
-                </div>
-                `;
+          <img src="./assets/img/${
+            item.img
+          }.jpg" class="card-img-top" alt="Image">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+              <h4 class="card-title text-capitalize">${item.img}</h4>
+              <h4 class="card-price fw-bold">€${item.price.toFixed(2)}</h4>
+            </div>
+            <div class="d-flex justify-content-center">
+              <a href="#" class="btn btn-primary add-to-cart-btn w-100 d-flex justify-content-center align-items-center">
+                <p class="m-0">Add to cart</p> &nbsp; <span class="add-to-cart-btn-qtty">(0)</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      `;
+
+      const addToCartButton = itemList.querySelector(".add-to-cart-btn");
+      addToCartButton.addEventListener("click", () => {
+        addItem(item);
+      });
+
       subItemsContainer.appendChild(itemList);
     });
     itemsContainer.appendChild(subItemsContainer);
   }
-
-  let cartItems = [];
-  const valorTotal = document.querySelector(".valor-total");
-  const cartQtty = document.querySelector(".cart-container-btn-qtty");
-  const modalBody = document.querySelector(".modal-body");
 
   render_list_of_items();
 </script>
