--- a/shop.html
+++ b/shop.html
@@ -29,7 +29,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="cart-container-btn"
+            class="cart-container-icon"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
           >
@@ -46,7 +46,13 @@
             >0</span
           >
           <span
-            class="cart-container-total"
+            class="cart-container-arrow fw-bold fs-4"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            >></span
+          >
+          <span
+            class="cart-container-total fw-bold fs-4"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
             >€0,00</span
