--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
     <div class="page-container">
       <!-- Page content -->
       <header
-        class="fixed-header d-flex justify-content-between align-items-center pt-2 px-4"
+        class="fixed-header"
       >
         <h1 class="fw-bold">Tienda online</h1>
         <div class="cart-container">
@@ -247,7 +247,7 @@
       const itemList = document.createElement("div");
       itemList.classList.add("col");
       itemList.innerHTML = `
-        <div class="card h-100 shadow">
+        <div class="card h-100 shadow-sm">
           <img src="./assets/img/${
             item.img
           }.jpg" class="card-img-top" alt="Image">
