--- a/shop.html
+++ b/shop.html
@@ -44,13 +44,13 @@
             >0</span
           >
           <span
-            class="cart-container-arrow fw-bold fs-4"
+            class="cart-container-arrow fs-4"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
             >></span
           >
           <span
-            class="cart-container-total fw-bold fs-4"
+            class="cart-container-total fs-4"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
             >€0,00</span
@@ -258,7 +258,7 @@
               <h4 class="card-price fw-bold">€${item.price.toFixed(2)}</h4>
             </div>
             <div class="d-flex justify-content-center">
-              <a href="#" class="btn btn-primary add-to-cart-btn w-100 d-flex justify-content-center align-items-center" data-product="${
+              <a href="#" class="btn add-to-cart-btn w-100 d-flex justify-content-center align-items-center" data-product="${
                 item.img
               }">
                 <p class="m-0">Agregar al carrito</p> &nbsp; <span class="add-to-cart-btn-qtty">(0)</span>
