--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,14 @@
     <div class="page-container">
       <!-- Page content -->
       <header class="fixed-header">
-        <h1 class="fw-bold">Tienda online</h1>
+        <h1>
+          <a
+            href="https://github.com/nicosis/test-tienda-online"
+            target="_blank"
+            class="text-decoration-none link-unstyled"
+            >Botiga Online dels Millors Productes</a
+          >
+        </h1>
         <div class="cart-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -141,27 +148,27 @@
         const modalItem = document.createElement("div");
         modalItem.classList.add("modal-item");
         modalItem.innerHTML = `
-        <p class="modal-item-name text-capitalize">${item.name}</p>
-        <span class="modal-item-price">€${item.price.toFixed(2)}</span>
-        <span class="modal-item-qtty fw-bold">x${item.qtty}</span>
-        <span class="modal-item-subTotal fw-bold">€${(
-          item.price * item.qtty
-        ).toFixed(2)}</span>
-        <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="modal-item-deleteIcon"
-        >
-        <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
-        />
-        </svg>
-      `;
+          <p class="modal-item-name text-capitalize">${item.img}</p>
+          <span class="modal-item-price">€${item.price.toFixed(2)}</span>
+          <span class="modal-item-qtty fw-bold">x${item.qtty}</span>
+          <span class="modal-item-subTotal fw-bold">€${(
+            item.price * item.qtty
+          ).toFixed(2)}</span>
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="modal-item-deleteIcon"
+          >
+          <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+          />
+          </svg>
+        `;
 
         totalQtty += item.qtty;
         totalPrice = totalPrice + item.qtty * item.price;
@@ -177,50 +184,32 @@
           ".modal-item-deleteIcon"
         );
         modalDeleteBtn.addEventListener("click", () => {
-          deleteItemFromCart(item);
+          cartItems = cartItems.filter((cartItem) => cartItem.id !== item.id);
+          const dataItem = data.find((dataItem) => dataItem.img === item.img);
+          dataItem.qtty = 0;
+          updateItemQuantityInList(dataItem);
+          showCart();
         });
       });
-      updateCardItemQtty();
     }
   }
 
-  // Función para actualizar la cantidad de productos de cada card.
-  function updateCardItemQtty(productName) {
-    const cardItemsQtty = document.querySelectorAll(".item-qtty");
-
-    cardItemsQtty.forEach((element) => {
-      const productName = element.getAttribute("data-product");
-      const product = cartItems.find((item) => item.name === productName);
-
-      if (product) {
-        element.textContent = `x${product.qtty}`;
-      } else {
-        element.textContent = "x0"; // Si no se encuentra, mostrar 0.
+  // Función para imprimir en cada tarjeta la cantidad de elementos agregados al carrito.
+  function updateItemQuantityInList(item) {
+    const cardTitles = document.querySelectorAll(".card-title");
+    cardTitles.forEach((cardTitle) => {
+      if (cardTitle.textContent.includes(item.img)) {
+        const itemList = cardTitle.closest(".card");
+        const cardQtty = itemList.querySelector(".card-qtty");
+        cardQtty.textContent = `x${item.qtty}`;
       }
     });
-  }
-
-  // Función para remover un item del carrito.
-  function deleteItemFromCart(item) {
-    console.log("eliminar del carrito: ", item);
-
-    updatedCartItems = cartItems.filter((cartItem) => cartItem.id !== item.id);
-    cartItems = [...updatedCartItems];
-
-    const dataItem = data.find((dataItem) => dataItem.img === item.name);
-
-    if (dataItem) {
-      dataItem.qtty = 0;
-    }
-    updateCardItemQtty();
-    showCart();
-    console.log('data: ',data);
   }
 
   function addItem(event, item) {
     event.preventDefault(); // Evitar que el scroll regrese al top luego del click.
 
-    const existingItem = cartItems.find((e) => e.name === item.img);
+    const existingItem = cartItems.find((e) => e.img === item.img);
 
     if (existingItem) {
       existingItem.qtty++;
@@ -232,7 +221,7 @@
       itemData = {
         id: randomId(),
         qtty: 1,
-        name: item.img,
+        img: item.img,
         price: item.price,
       };
       cartItems = [...cartItems, itemData];
@@ -244,13 +233,14 @@
     }
 
     showCart();
-    console.log('data: ',data);
+    updateItemQuantityInList(item);
+    console.log("item de addItem: ", item.img);
   }
 
   function removeItem(event, item) {
     event.preventDefault(); // Evitar que el scroll regrese al top luego del click.
 
-    const existingItem = cartItems.find((e) => e.name === item.img);
+    const existingItem = cartItems.find((e) => e.img === item.img);
 
     if (existingItem) {
       if (existingItem.qtty > 0) {
@@ -268,8 +258,7 @@
       }
     }
     showCart();
-    updateCardItemQtty();
-    console.log('data: ',data);
+    updateItemQuantityInList(item);
   }
 
   function render_list_of_items() {
@@ -280,33 +269,32 @@
       const itemList = document.createElement("div");
       itemList.classList.add("col");
       itemList.innerHTML = `
-        <div class="card h-100 shadow-sm">
-          <img src="./assets/img/${
-            item.img
-          }.jpg" class="card-img-top" alt="Image">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-center">
-              <h4 class="card-title text-capitalize">${item.img}</h4>
-              <h4 class="card-price fw-bold">€${item.price.toFixed(2)}</h4>
-              </div>
+          <div class="card h-100 shadow-sm">
+            <img src="./assets/img/${
+              item.img
+            }.jpg" class="card-img-top" alt="Image">
+            <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-
-                <a href="#" class="btn add-to-cart-btn">
+                <h4 class="card-title text-capitalize mb-0">${item.img}</h4>
+                <h4 class="card-price fw-bold mb-0">€${item.price.toFixed(
+                  2
+                )}</h4>
+              </div>
+              <div class="d-flex justify-content-end align-items-center mb-1">
+                <p class="m-0">Cantidad en el carrito:</p>
+                <span class="card-qtty fw-bold ms-1">x0</span>
+              </div>
+              <div class="d-flex align-items-center">
+                <a href="#" class="btn add-to-cart-btn flex-grow-1 flex-shrink-1">
                   <p class="m-0">Agregar al carrito</p>
                 </a>
-                <span>></span>
-                <span class="item-qtty fw-bold fs-5 mx-1" data-product="${
-                  item.img
-                }">x0</span>
-                <span><</span>
-                <a href="#" class="btn remove-from-cart-btn">
+                <a href="#" class="btn remove-from-cart-btn flex-grow-1 flex-shrink-1">
                   <p class="m-0">Quitar del carrito</p>
                 </a>
-
+              </div>
             </div>
           </div>
-        </div>
-      `;
+        `;
 
       const addToCartButton = itemList.querySelector(".add-to-cart-btn");
       addToCartButton.addEventListener("click", (event) => {
